# Final-Project_Study-Assistant

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  setup.sh
app/: main.cpp
core/: AiClient.cpp  AiClient.h  Flashcard.h  FlashcardGenerator.cpp  FlashcardGenerator.h
qmlgui/: BoardManager.cpp  BoardManager.h  CmakeLists.txt  FlashcardModel.cpp  FlashcardModel.h  StudyController.cpp  StudyController.h  main.cpp
qmlgui/qml/: AskAiPage.qml  BoardPage.qml  MyBoardsPage.qml  StudyFlashcardsPage.qml  main.qml
qtgui/: MainWindow.cpp  MainWindow.h  main.cpp
scripts/: post_sample_notes.sh
worker/: worker.js  wrangler.toml
